fix: style issue of left bar on mobile

--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -260,7 +260,7 @@ summary {
 }
 
 iframe {
-  /* width: 100%; */
+  width: 100%;
   margin: 1rem 0;
 }
 
